--- a/ipython_sandbox/force_field_simple.ipynb
+++ b/ipython_sandbox/force_field_simple.ipynb
@@ -281,8 +281,8 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "v_t &= \\mu v_{t-1} - \\eta \\nabla f(\\theta_{t-1})\\\\\n",
-    "\\theta_t &= \\theta_{t-1} + v_t\n",
+    "v_t &=& \\mu v_{t-1} - \\eta \\nabla f(\\theta_{t-1})\\\\\n",
+    "\\theta_t &=& \\theta_{t-1} + v_t\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
